--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "alpinejs-ssr",
   "version": "1.0.0",
-  "description": "Simple server-side-rendering for Alpine.js.",
+  "description": "Dead simple server-side-rendering for Alpine.js.",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Dashpilot",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dashpilot/alpinejs-ssr"
+  },
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
